--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   },
