--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-validation": "^4.1.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
