adicionando migrations e seeders

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_PORT=3306
+DB_HOST=containers-us-west-130.railway.app
+DB_PORT=5601
 DB_USER=root
-DB_NAME=casavizentini
-DB_PASS=112686
+DB_NAME=railway
+DB_PASS=SB3b3YvQdy4SxrVtnMhQ
 DB_DIALECT=mysql
 
 
