--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 #Credenciais de acesso ao banco de dados
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_NAME=casavizentini
-DB_PASS=112686
-DB_DIALECT=mysql
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_NAME=
+DB_PASS=
+DB_DIALECT=
